# gleipnir

./: .gitignore  pyproject.toml
src/: app.py  main.py
src/handler/: handler.py  meta.py
src/log/: log.py
src/proxy_process/: proxy.py
src/serialization/adaptix/: retort.py
src/serialization/serialiser/: base.py  json.py  msgpack.py
